[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/shader_test/muzzle.gd" type="Script" id=1]
[ext_resource path="res://scenes/shader_test/muzzle_01.tres" type="QuadMesh" id=2]
[ext_resource path="res://assets/sprites/particles/star_04.png" type="Texture" id=3]



[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.591304, 1 )
colors = PoolColorArray( 0.991075, 1, 0, 1, 0.995013, 0.909504, 0, 1, 1, 0.355608, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.00389105, 0.219298 ), 0.0, 1.00854, 0, 0, Vector2( 0.994163, 1 ), 1.03326, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
direction = Vector3( 0, 1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.2
linear_accel = 0.05
scale = 0.8
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.597826 )
colors = PoolColorArray( 0.972549, 0.972549, 0, 1, 1, 0.477948, 0, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0.214046 ), 0.0, 0.0, 0, 0, Vector2( 0.466926, 0.98159 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.126327 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
direction = Vector3( 0, 10, 0 )
gravity = Vector3( 0, -1, 0 )
initial_velocity = 1.0
angular_velocity = 200.0
angular_velocity_random = 1.0
radial_accel = 1.0
radial_accel_random = 1.0
angle = 267.7
angle_random = 1.0
scale = 0.2
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=11]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=12]
material = SubResource( 11 )

[node name="MuzzleFlash" type="Spatial"]
script = ExtResource( 1 )

[node name="FlashParticles" type="Particles" parent="."]
emitting = false
amount = 1
one_shot = true
speed_scale = 10.0
visibility_aabb = AABB( -0.587918, -1.17913, -0.603405, 1.17584, 2.35826, 1.20681 )
process_material = SubResource( 5 )
draw_pass_1 = ExtResource( 2 )

[node name="SparkParticles" type="Particles" parent="."]
emitting = false
one_shot = true
speed_scale = 4.0
explosiveness = 0.58
randomness = 1.0
visibility_aabb = AABB( -0.586809, -1.17502, -0.60856, 1.17362, 2.35003, 1.21712 )
process_material = SubResource( 10 )
draw_pass_1 = SubResource( 12 )

[node name="OmniLight" type="OmniLight" parent="."]
visible = false
light_color = Color( 1, 0.866667, 0, 1 )
